# ROS2_rUBot_mecanum_ws

./: .gitignore  README.md  frames_2025-05-29_09.08.58.gv  frames_2025-06-03_16.23.49.gv  frames_2025-09-17_08.41.29.gv
Documentation/: 01_rUBot_setup.md  02_rUBot_model&bringup.md  02_rUBot_model&control.md  03_rUBot_control.md  03_rUBot_model&control.md  04_rUBot_navigation.md  04_rUBot_slam_navigation.md  04a_rUBot_navigation_gmapping.md  04a_rUBot_slam_navigation.md  04b_rUBot_navigation_cartographer.md  04c_rUBot_navigation_rtabmap.md  05_Camera.md  05_Project_TrafficSigns_Navigation_YOLO.md  06_Project_based_Object_Recognition.md  06_Web_control.md  07_Project_TrafficSigns_Navigation_YOLO.md
Documentation/Files/: 01_rUBot_setup_0.md  01_rUBot_setup_docker.md  02_PC_workspace_setup.md  02_rUBot_setup_overInternet.md  03_Robot_drivers_Bringup.md  03_rUBot_driver.md  03_rUBot_model&bringup_0.md  03b_Driver_Arduino_nano.md  04_rUBot_driver.md  05_PIgpio_install.md  06_Project_Optimizing_Navigation_cursUdemy.md
Documentation/Files/Docker/: docker-compose-v2.yaml
Documentation/Files/Docker_PC/: Dockerfile  Dockerfile.pc  docker-compose.pc.yaml  docker-compose.pcWSL.yaml  docker-compose.pcXlaunch.yaml  docker-compose.yaml  entrypoint.pc.sh  rubot_entrypoint.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
maps/: my_map.pgm  my_map.yaml
src/: mapper_rviz_config.rviz
src/AI_Projects/custom_msgs/: CMakeLists.txt  package.xml
src/AI_Projects/custom_msgs/msg/: InferenceResult.msg
src/Robot_drivers/serial_motor_msgs/: CMakeLists.txt  package.xml
src/Robot_drivers/serial_motor_msgs/msg/: MecanumEncoderVals.msg  MecanumMotorVels.msg  MotorCommands.msg
src/cartographer_slam/: package.xml  setup.py
src/gz_mecanum_control/: CMakeLists.txt  package.xml
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_control/: package.xml  setup.py
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_driver/: package.xml
src/robot_description/: CMakeLists.txt
web/: index.html  index_JoyPosCam.html  index_JoyPosCam_hw.html  index_JoyPosCam_sw.html  index_joycontrol.html  index_position.html
(+413 files in other folders)
